--- a/dia/Launch Screen.storyboard
+++ b/dia/Launch Screen.storyboard
@@ -15,14 +15,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ofIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bkf-fv-LY2">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ofIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bkf-fv-LY2">
+                                <rect key="frame" x="144.5" y="385.5" width="125" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="7De-6T-tGn"/>
+                                    <constraint firstAttribute="width" constant="125" id="KR0-tM-uSV"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bkf-fv-LY2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ELe-9P-HDb"/>
+                            <constraint firstItem="bkf-fv-LY2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="teU-Vi-MHW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
