--- a/dia/Launch Screen.storyboard
+++ b/dia/Launch Screen.storyboard
@@ -16,10 +16,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ofIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bkf-fv-LY2">
-                                <rect key="frame" x="144.5" y="385.5" width="125" height="125"/>
+                                <rect key="frame" x="157" y="398" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="125" id="7De-6T-tGn"/>
-                                    <constraint firstAttribute="width" constant="125" id="KR0-tM-uSV"/>
+                                    <constraint firstAttribute="width" constant="100" id="XD2-wJ-NNd"/>
+                                    <constraint firstAttribute="height" constant="100" id="mSL-lT-HGE"/>
                                 </constraints>
                             </imageView>
                         </subviews>
